--- a/GE.WebUI/Areas/Admin/Views/Aphorisms/Index.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Aphorisms/Index.cshtml
@@ -42,7 +42,7 @@
 @section scripts{
     <script>
         $(function () {
-            $('#grid-aphorisms').sx_gv();
+            var grid = new SxGridView('#grid-aphorisms');
         });
     </script>
 }
