--- a/GE.WebUI/Areas/Admin/Views/AuthorAphorisms/Index.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/AuthorAphorisms/Index.cshtml
@@ -36,7 +36,7 @@
 @section scripts{
     <script>
         $(function () {
-            $('#grid-author-ap').sx_gv();
+            var grid = new SxGridView('#grid-author-ap');
         });
     </script>
 }
