--- a/GE.WebUI/Areas/Admin/Views/Games/Index.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Games/Index.cshtml
@@ -11,6 +11,8 @@
 
 @section scripts{
     <script>
-        $('#grid-games').sx_gv();
+        $(function () {
+            var grid = new SxGridView('#grid-games');
+        });
     </script>
 }
