--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -43,6 +43,8 @@
     }*@
 }
 
+@Html.Action("Featured", "MaterialCategories", new { amount=4})
+
 <section>
     @Html.Action("RandomList", "SiteTests")
 </section>
