--- a/GE.WebUI/Areas/Admin/Views/MaterialCategories/EditorTemplates/VMMaterialCategory.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/MaterialCategories/EditorTemplates/VMMaterialCategory.cshtml
@@ -85,6 +85,12 @@
     }
 
     <div class="form-group">
+        @Html.LabelFor(x => x.Description, new { @class = "control-label" })
+        @Html.EditorFor(x => x.Description, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите описание категории" } })
+        @Html.ValidationMessageFor(x => x.Description)
+    </div>
+
+    <div class="form-group">
         <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
         @Html.ActionLink("Назад", "Index", "MaterialCategories", new { mct = Model.ModelCoreType }, new { @class = "btn btn-default" })
     </div>
