--- a/GE.WebUI/less/game-list.less
+++ b/GE.WebUI/less/game-list.less
@@ -8,7 +8,7 @@
 @g-m-xs-w: 60px;
 
 #game-list {
-    margin-bottom: @def-pad*2;
+    margin-bottom: @def-pad;
     @media (max-width: @screen-xs-max) {
         position: relative;
     }
