--- a/GE.WebUI/Views/Aphorisms/Details.cshtml
+++ b/GE.WebUI/Views/Aphorisms/Details.cshtml
@@ -2,11 +2,9 @@
 @model VMDetailAphorism
 @{
     var author = (VMAuthorAphorism)ViewBag.Author;
-    var category = (SxVMMaterialCategory)ViewBag.Category;
+    var category = (VMMaterialCategory)ViewBag.Category;
     ViewBag.Title = ViewBag.Title ?? Model.Aphorism.Title;
-    ViewBag.PageImage = author != null && author.PictureId.HasValue
-        ? Url.ContentAbsUrl(Url.Action("Picture", "Pictures", new { id = author.PictureId }))
-        : null;
+    ViewBag.PageImage = Url.ContentAbsUrl(Url.Action("Picture", "Piuctures", new { id = author?.PictureId ?? Model.Aphorism?.FrontPictureId }));
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
     ViewBag.Description = ViewBag.Description ?? (author != null ? author.Name + ". " : null) + "Афоризмы, короткие изречения великих людей, коротко о главном";
 
@@ -20,6 +18,8 @@
         }
     </style>
 }
+
+@Html.SxBreadcrumbs((SxVMBreadcrumb[])ViewBag.Breadcrumbs)
 
 <div class="ap-page">
     <div class="row">
@@ -36,12 +36,12 @@
             </blockquote>
             @Html.SxShareButtons()
 
-            @Html.Action("Edit", "Comments", new { mid = Model.Aphorism.Id, mct = 6/*aphorism*/ }))
+            @Html.Action("Edit", "Comments", new { mid = Model.Aphorism.Id, mct = 6/*aphorism*/ })
 
             @*author*@
             @if (Model.TopForAuthor.Any())
             {
-                @Html.Partial("_List", Model.TopForAuthor, new ViewDataDictionary { { "Author", author } })
+                @Html.Partial("_List", Model.TopForAuthor, new ViewDataDictionary { { "Author", Model.Aphorism.Author} })
                 <div class="text-center">
                     <a href="@Url.Action("List", new { author=author.TitleUrl})" class="btn btn-default btn-transparent white">Все афоризмы автора</a>
                 </div>
@@ -50,9 +50,9 @@
             @*category*@
             @if (Model.TopForCategory.Any())
             {
-                @Html.Partial("_List", Model.TopForCategory, new ViewDataDictionary { { "Category", category } })
+                @Html.Partial("_List", Model.TopForCategory, new ViewDataDictionary { { "Category", Model.Aphorism.Category } })
                 <div class="text-center">
-                    <a href="@Url.Action("List", new { controller="Aphorisms", categoryId= Model.Aphorism.CategoryId})" class="btn btn-default btn-transparent white">Все афоризмы категории</a>
+                    <a href="@Url.Action("List", "Aphorisms", new { categoryId= Model.Aphorism.CategoryId})" class="btn btn-default btn-transparent white">Все афоризмы категории</a>
                 </div>
             }
         </div>
