--- a/GE.WebUI/Views/Error/ServerError.cshtml
+++ b/GE.WebUI/Views/Error/ServerError.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="e-txt">Ошибка <span class="e-num">500</span></div>
-<div class="e-mes">Непредвиденная ошибка сервера. Мы уже работаем над усранением ошибки.</div>
+<div class="e-mes">Непредвиденная ошибка сервера. Мы уже работаем над устранением ошибки.</div>
 
 <ul class="e-menu">
     <li>
