--- a/GE.WebUI/less/aphorisms.less
+++ b/GE.WebUI/less/aphorisms.less
@@ -258,7 +258,7 @@
     }
 }
 
-.ap-list > ul > li:hover {
+.ap-list > ul > li.ap-list__item:hover {
     @media (max-width: @screen-xs-max) {
     }
 
@@ -286,6 +286,11 @@
 
 .ap-list-page {
     margin-top: @def-pad*2;
+}
+
+.ap-list__video{
+    position:relative;
+    height:150px;
 }
 
 //aph-cats
