--- a/GE.WebUI/Views/Aphorisms/_List.cshtml
+++ b/GE.WebUI/Views/Aphorisms/_List.cshtml
@@ -40,7 +40,7 @@
         @for (int i = 0; i < Model.Length; i++)
             {
                 var a = Model[i];
-            <li>
+            <li class="ap-list__item">
                 @Html.DisplayFor(x => a)
             </li>
         }
