--- a/GE.WebUI/Views/Shared/_PopularMaterials.cshtml
+++ b/GE.WebUI/Views/Shared/_PopularMaterials.cshtml
@@ -1,4 +1,4 @@
-﻿@model VMMaterial[]
+﻿@model SxVMMaterial[]
 @{
     var inNewTab = Convert.ToBoolean(ViewBag.InNewTab);
 }
@@ -8,7 +8,7 @@
     <div class="pop-mat">
         <h3 class="pop-mat__header">@ViewBag.PopularMaterialTitle</h3>
         <div class="row">
-            @for (int i = 0; i < Model.Length; i++)
+            @for (var i = 0; i < Model.Length; i++)
             {
                 var item = Model[i];
                 <div class="col-md-3">
