--- a/GE.WebUI/Views/Account/ConfirmEmail.cshtml
+++ b/GE.WebUI/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Confirm Email";
+    ViewBag.Title = "Подтверждение регистрации";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div>
-    <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+@section head{
+    <meta name="robots" content="noindex" />
+}
+
+<div class="identity-page login">
+    <div class="wrapper">
+        <h2>Поздравляем!</h2>
+        <br />
+        <p>Регистрация успешно завершена.</p>
+        <p>Воспользуйтесь своими учетными данными, чтобы войти на сайт на <a href="@Url.Action("Login", "Account")">этой странице</a>. </p>
+    </div>
 </div>
